# nockup

./: .gitignore  Cargo.toml  README.md  build.rs  default-config-aarch64-apple-darwin.toml  default-config-x86_64-unknown-linux-gnu.toml  default-config.toml  default-manifest-with-libraries.toml  default-manifest.toml  install-replit.sh  install.sh  quick_start.sh  zorp-gpg-key.pub
.github/actions/: claude-code-review.yml
.github/workflows/: deploy.yml  release.yml
crates/juju/: Cargo.toml  README.md
manifests/: channel-nockup-nightly.toml  channel-nockup-stable.toml  example-manifest-with-libraries.toml
replit/: .replit  setup-nockup.sh
scripts/: generate-manifest.sh
src/: Cargo.toml  cli.rs  lib_manager.rs  main.rs  validation.rs  version.rs
src/commands/: build.rs  channel.rs  common.rs  init.rs  install.rs  mod.rs  run.rs  start.rs  toolchain.rs  up.rs  update.rs
templates/basic/: Cargo.toml  build.rs  manifest.toml
templates/basic/hoon/app/: app.hoon
templates/basic/src/: main.rs
templates/chain/: Cargo.toml  README.md  manifest.toml
templates/chain/.data.chain/checkpoints/: 0.chkjam  1.chkjam
templates/chain/hoon/app/: app.hoon
templates/chain/hoon/app/dumbnet/: inner.hoon  outer.hoon
templates/chain/hoon/app/dumbnet/lib/: consensus.hoon  derived.hoon  miner.hoon  types.hoon
templates/chain/hoon/app/wallet/lib/: tx-builder.hoon  types.hoon  utils.hoon
templates/chain/hoon/lib/: lib.hoon  types.hoon
templates/chain/src/: main.rs
templates/codetalker/: Cargo.toml  README.md
templates/codetalker/hoon/app/: app.hoon  listen.hoon  talk.hoon
templates/codetalker/hoon/lib/: lib.hoon
templates/codetalker/src/: lib.rs  main.rs
templates/grpc/: Cargo.toml  manifest.toml
templates/grpc/hoon/app/: listen.hoon  talk.hoon
templates/grpc/src/: listen.rs  talk.rs
templates/http-server/: Cargo.toml  README.md  manifest.toml
templates/http-server/hoon/app/: app.hoon
templates/http-server/hoon/lib/: html.hoon  http.hoon
templates/http-server/src/: main.rs
templates/http-static/: Cargo.toml  README.md  manifest.toml
templates/http-static/hoon/app/: app.hoon
templates/repl/: Cargo.toml  README.md  manifest.toml
templates/repl/hoon/app/: app.hoon
templates/repl/src/: main.rs
tests/: cli_tests.rs
toolchain/: channel-nockup-nightly.toml  channel-nockup-stable.toml  collate-manifests.toml  hoonc-manifest.toml  nockup-manifest.toml
toolchains/: hoon-aarch64-apple-darwin-manifest.toml  hoon-darwin64-stable.toml  hoon-linux64-stable.toml  hoon-x86_64-apple-darwin-stable.toml  hoon-x86_64-unknown-linux-gnu-manifest.toml  hoonc-aarch64-apple-darwin-manifest.toml  hoonc-darwin64-stable.toml  hoonc-linux64-stable.toml  hoonc-x86_64-unknown-linux-gnu-manifest.toml  nockup-aarch64-apple-darwin-manifest.toml  nockup-darwin64-stable.toml  nockup-linux64-stable.toml  nockup-x86_64-apple-darwin-stable.toml  nockup-x86_64-unknown-linux-gnu-manifest.toml  stable-manifest.toml
