[package]
name = "nockup"
version = "0.0.1"
edition = "2021"
authors = [""]
description = "A developer support framework for NockApp development"
license = "MIT"
repository = "https://github.com/sigilante/nockup"
homepage = "https://github.com/sigilante/nockup"
documentation = "https://docs.nockchain.org/"
readme = "README.md"
keywords = ["nockchain", "nockapp", "development", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nockup"
path = "src/main.rs"

[dependencies]
# NockVM
nockapp = { git = "https://github.com/zorp-corp/nockchain.git", branch = "master" }
#nockvm = { git = "https://github.com/zorp-corp/nockchain.git", branch = "master" }

# CLI parsing and structure
clap = { version = "4.4", features = ["derive", "cargo"] }

# Serialization for config files
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Async runtime for network operations
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process"] }

# HTTP client for update checks
reqwest = { version = "0.11", features = ["json", "blocking"] }

# File system operations
fs_extra = "1.3"

# Template engine for project generation
handlebars = "4.5"

# Date/time handling for version info
chrono = { version = "0.4", features = ["serde"] }

# Process execution utilities
which = "4.0"

# Terminal output formatting
colored = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Directories
dirs = "5.0"

serde_json = "1.0"

walkdir = "2.4"

blake3 = "1.8.2"

sha1 = "0.10.6"

hex = "0.4"

proptest = "1.0"

[build-dependencies]
# For generating version info at build time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# Performance profiling (optional)
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
