[package]
name = "nockup"
version = "0.4.0"
edition = "2021"
authors = [""]
description = "A developer support framework for NockApp development"
license = "MIT"
repository = "https://github.com/sigilante/nockup"
homepage = "https://github.com/sigilante/nockup"
documentation = "https://docs.nockchain.org/"
readme = "README.md"
keywords = ["nockchain", "nockapp", "development", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nockup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.0"
dirs = "5.0"
flate2 = "1.0"
fs_extra = "1.3"
handlebars = "4.5"
hex = "0.4"
proptest = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
toml = "0.8"
walkdir = "2.4"
which = "8.0"

[build-dependencies]
# For generating version info at build time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# Performance profiling (optional)
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
