[package]
name = "juju"
version.workspace = true
edition.workspace = true

[dependencies]
nockapp = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm.workspace = true
termimad.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
