[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{author_name}} <{{author_email}}>"]
description = "A NockApp project"

[[bin]]
name = "{{project_name}}"
path = "src/main.rs"

[dependencies]
# NockVM dependency
nockapp = { git = "https://github.com/zorp-corp/nockchain.git", rev = "{{nockapp_commit_hash}}" }
nockvm = { git = "https://github.com/zorp-corp/nockchain.git", rev = "{{nockapp_commit_hash}}" }
nockvm_macros = { git = "https://github.com/zorp-corp/nockchain.git", rev = "{{nockapp_commit_hash}}" }

# Common dependencies for NockApps
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
] }
tokio-util = "0.7.11"

[build-dependencies]
# Build script dependencies if needed