[package]
name = "chain"
version = "0.1.0"
edition = "2021"
authors = ["N. E. Davis <neal@zorp.io>"]
description = "A NockApp project"

[[bin]]
name = "chain"
path = "src/main.rs"

[dependencies]
# NockVM dependency
nockapp = { git = "https://github.com/zorp-corp/nockchain.git", rev = "485e914b389a1e518d4aaaa24f5f079d0ad894be" }
nockapp-grpc = { git = "https://github.com/zorp-corp/nockchain.git", rev = "485e914b389a1e518d4aaaa24f5f079d0ad894be" }
nockvm = { git = "https://github.com/zorp-corp/nockchain.git", rev = "485e914b389a1e518d4aaaa24f5f079d0ad894be" }
nockvm_macros = { git = "https://github.com/zorp-corp/nockchain.git", rev = "485e914b389a1e518d4aaaa24f5f079d0ad894be" }
zkvm-jetpack = { git = "https://github.com/zorp-corp/nockchain.git", rev = "485e914b389a1e518d4aaaa24f5f079d0ad894be" }
kernels = { git = "https://github.com/zorp-corp/nockchain.git", rev = "485e914b389a1e518d4aaaa24f5f079d0ad894be" }

# Common dependencies for NockApps
clap = "4.4.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1.41"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
] }
tokio-util = "0.7.11"

[build-dependencies]
# Build script dependencies if needed