[package]
name = "http-server"
version = "0.1.0"
edition = "2021"
authors = ["N. E. Davis <neal@zorp.io>"]
description = "A NockApp project"

[[bin]]
name = "http-server"
path = "src/main.rs"

[dependencies]
# NockVM dependency
nockapp = { git = "https://github.com/zorp-corp/nockchain.git", rev = "336f744b6b83448ec2b86473a3dec29b15858999" }
nockvm = { git = "https://github.com/zorp-corp/nockchain.git", rev = "336f744b6b83448ec2b86473a3dec29b15858999" }
nockvm_macros = { git = "https://github.com/zorp-corp/nockchain.git", rev = "336f744b6b83448ec2b86473a3dec29b15858999" }

# Common dependencies for NockApps
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
] }
tokio-util = "0.7.11"

[build-dependencies]
# Build script dependencies if needed